# nku-AI-lab

./: README.md  搜索算法.md
第一次作业-乔昊-2212195/搜索算法代码/: main.py  paint.py  puzzle_bfs.py  puzzle_dfs.py  puzzle_heuristic_manhattan.py  puzzle_heuristic_misplaced.py  puzzle_random.py  pyproject.toml  test_sample.txt
第二次作业/: NK-I深度学习用户使用手册.docx  使用mnist数据集的图像分类任务流构建及预测.docx
