[tool.poetry]
name = "eight-puzzle"
version = "0.1.0"
description = ""
authors = ["qh"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
psutil = "^6.1.0"
tabulate = "^0.9.0"
matplotlib = "^3.9.2"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
